added json files for the two test images

--- a/notebooks/image_segmenation.ipynb
+++ b/notebooks/image_segmenation.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,9 +30,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/vjeyam/miniconda3/envs/sensor/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model loaded successfully.\n"
+     ]
+    }
+   ],
    "source": [
     "pretrained_file_path = '../yolov5m.pt'\n",
     "model = YOLOv5(pretrained_file_path)\n",
@@ -46,9 +62,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing complete. The right half of the images have been saved to ../data/cam1_rgb\n"
+     ]
+    }
+   ],
    "source": [
     "# Define source and destination directories\n",
     "src_dir = '../data/cam1'\n",
@@ -95,71 +119,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "import cv2\n",
+    "\n",
+    "# Define the directory containing the JSON files\n",
+    "annotation_dir = '../data/cam1_labeled'\n",
+    "\n",
+    "# List all files in the annotation directory\n",
+    "files = os.listdir(annotation_dir)\n",
+    "\n",
+    "# Loop through the files and rename JSON files\n",
+    "for filename in files:\n",
+    "    if filename.endswith('_json.json'):\n",
+    "        new_filename = filename.replace('_json', '')\n",
+    "        old_filepath = os.path.join(annotation_dir, filename)\n",
+    "        new_filepath = os.path.join(annotation_dir, new_filename)\n",
+    "        os.rename(old_filepath, new_filepath)\n",
+    "        print(f'Renamed: {filename} to {new_filename}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import json\n",
-    "import matplotlib.pyplot as plt\n",
+    "import os\n",
     "from PIL import Image, ImageDraw\n",
     "\n",
-    "# Define paths\n",
-    "image_dir = \"../data/\"\n",
-    "annotation_dir = \"../data/cam1_labeled/\"\n",
-    "\n",
-    "# List of images\n",
-    "image_files = [\n",
-    "    \"date_1-5-2024_10.0.11_1_labeled.png\",\n",
-    "    \"date_1-5-2024_12.19.46_1_labeled.png\"\n",
-    "]\n",
-    "\n",
-    "# Function to load VIA annotations\n",
-    "def load_annotations(annotation_path):\n",
-    "    with open(annotation_path) as f:\n",
-    "        annotations = json.load(f)\n",
+    "def load_annotations(filepath):\n",
+    "    with open(filepath, 'r') as file:\n",
+    "        annotations = json.load(file)\n",
     "    return annotations\n",
     "\n",
-    "# Function to segment image based on VIA annotations\n",
     "def segment_image(image_path, annotations):\n",
     "    image = Image.open(image_path)\n",
     "    draw = ImageDraw.Draw(image)\n",
     "    \n",
-    "    for region in annotations['regions']:\n",
-    "        shape_attributes = region['shape_attributes']\n",
-    "        region_attributes = region['region_attributes']\n",
-    "        \n",
-    "        if 'name' in shape_attributes and shape_attributes['name'] == 'rect':\n",
+    "    image_filename = os.path.basename(image_path)\n",
+    "    if image_filename in annotations:\n",
+    "        regions = annotations[image_filename]['regions']\n",
+    "        for region in regions:\n",
+    "            shape_attributes = region['shape_attributes']\n",
     "            x = shape_attributes['x']\n",
     "            y = shape_attributes['y']\n",
     "            width = shape_attributes['width']\n",
     "            height = shape_attributes['height']\n",
-    "            \n",
-    "            if '1' in region_attributes.values() or 'grey_ref_panel' in region_attributes.values():\n",
-    "                draw.rectangle([(x, y), (x + width, y + height)], outline=\"red\", width=3)\n",
+    "            draw.rectangle([x, y, x + width, y + height], outline='red')\n",
+    "    else:\n",
+    "        raise ValueError(f\"Annotations for image {image_filename} not found\")\n",
     "    \n",
-    "    return image\n",
+    "    return image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error: [Errno 2] No such file or directory: '/Users/vjeyam/Desktop/Wheat Project/WSU-Wheat-Predictions/notebooks/date_1-5-2024_10.0.11_1_labeled.png'\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example usage\n",
+    "annotation_path = '../data/cam1_labeled/date_1-5-2024_10.0.11_1_labeled.json'\n",
+    "image_path = '../data/cam1_labeled/date_1-5-2024_10.0.11_1_labeled.png'\n",
     "\n",
-    "# Process each image and its corresponding annotations\n",
-    "for image_file in image_files:\n",
-    "    image_path = os.path.join(image_dir, image_file)\n",
-    "    annotation_file = image_file.replace('.png', '.json')\n",
-    "    annotation_path = os.path.join(annotation_dir, annotation_file)\n",
-    "    \n",
+    "try:\n",
     "    annotations = load_annotations(annotation_path)\n",
     "    segmented_image = segment_image(image_path, annotations)\n",
+    "    print('annotations:', annotations, '\\n')\n",
+    "    print('segmented_image:', segmented_image)\n",
     "    \n",
     "    # Save the segmented image\n",
     "    output_path = os.path.splitext(image_path)[0] + \"_segmented.png\"\n",
     "    segmented_image.save(output_path)\n",
     "    print(f\"Segmented image saved to {output_path}\")\n",
-    "    \n",
-    "    # Display the segmented image\n",
-    "    plt.figure(figsize=(10, 8))\n",
-    "    plt.imshow(segmented_image)\n",
-    "    plt.axis('off')\n",
-    "    plt.show()"
+    "except Exception as e:\n",
+    "    print(f\"Error: {e}\")"
    ]
   },
   {
@@ -175,8 +221,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "delete_directory(dst_dir)"
+    "delete_directory('../data/cam1_rgb')\n",
+    "\n",
+    "# delete_directory('../data/cam1_labeled')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
