updated json and image segmentation method

--- a/notebooks/image_segmenation.ipynb
+++ b/notebooks/image_segmenation.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,25 +30,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/vjeyam/miniconda3/envs/sensor/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model loaded successfully.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "pretrained_file_path = '../yolov5m.pt'\n",
     "model = YOLOv5(pretrained_file_path)\n",
@@ -62,17 +46,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processing complete. The right half of the images have been saved to ../data/cam1_rgb\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Define source and destination directories\n",
     "src_dir = '../data/cam1'\n",
@@ -119,12 +95,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "\n",
     "# Define the directory containing the JSON files\n",
     "annotation_dir = '../data/cam1_labeled'\n",
     "\n",
@@ -143,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,38 +131,60 @@
     "    return annotations\n",
     "\n",
     "def segment_image(image_path, annotations):\n",
-    "    image = Image.open(image_path)\n",
-    "    draw = ImageDraw.Draw(image)\n",
+    "    try:\n",
+    "        image = Image.open(image_path)\n",
+    "        draw = ImageDraw.Draw(image)\n",
+    "        \n",
+    "        image_filename = os.path.basename(image_path)\n",
+    "        if image_filename in annotations:\n",
+    "            regions = annotations[image_filename]['regions']\n",
+    "            for region in regions:\n",
+    "                shape_attributes = region['shape_attributes']\n",
+    "                x = shape_attributes['x']\n",
+    "                y = shape_attributes['y']\n",
+    "                width = shape_attributes['width']\n",
+    "                height = shape_attributes['height']\n",
+    "                draw.rectangle([x, y, x + width, y + height], outline='red')\n",
+    "        else:\n",
+    "            raise ValueError(f\"Annotations for image {image_filename} not found\")\n",
+    "        \n",
+    "        return image\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error in segment_image: {e}\")\n",
+    "        raise\n",
+    "\n",
+    "# Example usage\n",
+    "annotation_path = '../data/cam1_labeled/date_1-5-2024_10.0.11_1_labeled.json'\n",
+    "image_path = '../data/cam1_labeled/date_1-5-2024_10.0.11_1_labeled.png'\n",
+    "\n",
+    "try:\n",
+    "    annotations = load_annotations(annotation_path)\n",
+    "    # print('Loaded annotations:', annotations)\n",
     "    \n",
-    "    image_filename = os.path.basename(image_path)\n",
-    "    if image_filename in annotations:\n",
-    "        regions = annotations[image_filename]['regions']\n",
-    "        for region in regions:\n",
-    "            shape_attributes = region['shape_attributes']\n",
-    "            x = shape_attributes['x']\n",
-    "            y = shape_attributes['y']\n",
-    "            width = shape_attributes['width']\n",
-    "            height = shape_attributes['height']\n",
-    "            draw.rectangle([x, y, x + width, y + height], outline='red')\n",
+    "    segmented_image = segment_image(image_path, annotations)\n",
+    "    if segmented_image:\n",
+    "        segmented_image.show()\n",
+    "        \n",
+    "        # Save the segmented image\n",
+    "        output_path = os.path.splitext(image_path)[0] + \"_segmented.png\"\n",
+    "        segmented_image.save(output_path)\n",
+    "        print(f\"Segmented image saved to {output_path}\")\n",
     "    else:\n",
-    "        raise ValueError(f\"Annotations for image {image_filename} not found\")\n",
-    "    \n",
-    "    return image"
+    "        print(\"Error: Segmented image is None.\")\n",
+    "\n",
+    "except FileNotFoundError as e:\n",
+    "    print(f\"Error: File not found - {e}\")\n",
+    "except ValueError as e:\n",
+    "    print(f\"Error: {e}\")\n",
+    "except Exception as e:\n",
+    "    print(f\"Error: {e}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Error: [Errno 2] No such file or directory: '/Users/vjeyam/Desktop/Wheat Project/WSU-Wheat-Predictions/notebooks/date_1-5-2024_10.0.11_1_labeled.png'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Example usage\n",
     "annotation_path = '../data/cam1_labeled/date_1-5-2024_10.0.11_1_labeled.json'\n",
@@ -196,14 +192,20 @@
     "\n",
     "try:\n",
     "    annotations = load_annotations(annotation_path)\n",
-    "    segmented_image = segment_image(image_path, annotations)\n",
-    "    print('annotations:', annotations, '\\n')\n",
-    "    print('segmented_image:', segmented_image)\n",
+    "    print('Loaded annotations:', annotations) # prints the annotations\n",
+    "    \n",
+    "    segmented_image = segment_image(image_path, annotations) # doesn't work after this line\n",
+    "    segmented_image.show()\n",
     "    \n",
     "    # Save the segmented image\n",
     "    output_path = os.path.splitext(image_path)[0] + \"_segmented.png\"\n",
     "    segmented_image.save(output_path)\n",
     "    print(f\"Segmented image saved to {output_path}\")\n",
+    "\n",
+    "except FileNotFoundError as e:\n",
+    "    print(f\"Error: File not found - {e}\")\n",
+    "except ValueError as e:\n",
+    "    print(f\"Error: {e}\")\n",
     "except Exception as e:\n",
     "    print(f\"Error: {e}\")"
    ]
