updated json format and image_segment method logic

--- a/notebooks/image_segmenation.ipynb
+++ b/notebooks/image_segmenation.ipynb
@@ -70,7 +70,7 @@
     "# Function to process images\n",
     "def process_images(src_dir, dst_dir):\n",
     "    for filename in os.listdir(src_dir):\n",
-    "        if filename.endswith('.jpg') or filename.endswith('.png'):\n",
+    "        if filename.endswith('.png'):\n",
     "            # Read the image\n",
     "            image_path = os.path.join(src_dir, filename)\n",
     "            image = cv2.imread(image_path)\n",
@@ -125,89 +125,55 @@
     "import os\n",
     "from PIL import Image, ImageDraw\n",
     "\n",
-    "def load_annotations(filepath):\n",
-    "    with open(filepath, 'r') as file:\n",
-    "        annotations = json.load(file)\n",
-    "    return annotations\n",
-    "\n",
-    "def segment_image(image_path, annotations):\n",
-    "    try:\n",
-    "        image = Image.open(image_path)\n",
-    "        draw = ImageDraw.Draw(image)\n",
+    "def segment_image(json_file, output_folder):\n",
+    "    with open(json_file, 'r') as f:\n",
+    "        data = json.load(f)\n",
     "        \n",
-    "        image_filename = os.path.basename(image_path)\n",
-    "        if image_filename in annotations:\n",
-    "            regions = annotations[image_filename]['regions']\n",
-    "            for region in regions:\n",
-    "                shape_attributes = region['shape_attributes']\n",
-    "                x = shape_attributes['x']\n",
-    "                y = shape_attributes['y']\n",
-    "                width = shape_attributes['width']\n",
-    "                height = shape_attributes['height']\n",
-    "                draw.rectangle([x, y, x + width, y + height], outline='red')\n",
-    "        else:\n",
-    "            raise ValueError(f\"Annotations for image {image_filename} not found\")\n",
+    "    for filename, image_data in data.items():\n",
     "        \n",
-    "        return image\n",
-    "    except Exception as e:\n",
-    "        print(f\"Error in segment_image: {e}\")\n",
-    "        raise\n",
-    "\n",
-    "# Example usage\n",
-    "annotation_path = '../data/cam1_labeled/date_1-5-2024_10.0.11_1_labeled.json'\n",
-    "image_path = '../data/cam1_labeled/date_1-5-2024_10.0.11_1_labeled.png'\n",
-    "\n",
-    "try:\n",
-    "    annotations = load_annotations(annotation_path)\n",
-    "    # print('Loaded annotations:', annotations)\n",
-    "    \n",
-    "    segmented_image = segment_image(image_path, annotations)\n",
-    "    if segmented_image:\n",
+    "        # Construct paths for segmented image and original image\n",
+    "        original_img_path = os.path.join('../data/cam1_labeled', filename)\n",
+    "        \n",
+    "        # Check if the original image file exists\n",
+    "        if not os.path.exists(original_img_path):\n",
+    "            print(f\"Error: Original image file '{original_img_path}' not found.\")\n",
+    "            continue\n",
+    "        \n",
+    "        # Open original image\n",
+    "        original_image = Image.open(original_img_path)\n",
+    "        \n",
+    "        # Create a mask image for the regions to remove\n",
+    "        mask = Image.new('L', original_image.size, 0)\n",
+    "        draw = ImageDraw.Draw(mask)\n",
+    "        \n",
+    "        regions_to_remove = []\n",
+    "        regions = image_data.get('regions', [])\n",
+    "        for idx, region in enumerate(regions):\n",
+    "            region_attributes = region.get('region_attributes', {})\n",
+    "            if not region_attributes:\n",
+    "                # If region_attributes is empty, mark for removal\n",
+    "                shape_attributes = region.get('shape_attributes', {})\n",
+    "                x = shape_attributes.get('x', 0)\n",
+    "                y = shape_attributes.get('y', 0)\n",
+    "                width = shape_attributes.get('width', 0)\n",
+    "                height = shape_attributes.get('height', 0)\n",
+    "                \n",
+    "                draw.rectangle([x, y, x + width, y + height], fill=255)\n",
+    "                regions_to_remove.append(idx)\n",
+    "        \n",
+    "        # Apply the mask to segment the original image\n",
+    "        segmented_image = Image.composite(original_image, Image.new('RGB', original_image.size, (255, 255, 255)), mask)\n",
+    "        \n",
+    "        # Save or display the segmented image\n",
+    "        segmented_img_path = os.path.join(output_folder, filename)\n",
+    "        segmented_image.save(segmented_img_path)\n",
     "        segmented_image.show()\n",
-    "        \n",
-    "        # Save the segmented image\n",
-    "        output_path = os.path.splitext(image_path)[0] + \"_segmented.png\"\n",
-    "        segmented_image.save(output_path)\n",
-    "        print(f\"Segmented image saved to {output_path}\")\n",
-    "    else:\n",
-    "        print(\"Error: Segmented image is None.\")\n",
     "\n",
-    "except FileNotFoundError as e:\n",
-    "    print(f\"Error: File not found - {e}\")\n",
-    "except ValueError as e:\n",
-    "    print(f\"Error: {e}\")\n",
-    "except Exception as e:\n",
-    "    print(f\"Error: {e}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Example usage\n",
-    "annotation_path = '../data/cam1_labeled/date_1-5-2024_10.0.11_1_labeled.json'\n",
-    "image_path = '../data/cam1_labeled/date_1-5-2024_10.0.11_1_labeled.png'\n",
+    "json_file_path = '../data/cam1_labeled/json1.json' # original name: date_1-5-2024_10.0.11_1_json.json\n",
+    "output_folder = '../data/cam1_segmented/'\n",
     "\n",
-    "try:\n",
-    "    annotations = load_annotations(annotation_path)\n",
-    "    print('Loaded annotations:', annotations) # prints the annotations\n",
-    "    \n",
-    "    segmented_image = segment_image(image_path, annotations) # doesn't work after this line\n",
-    "    segmented_image.show()\n",
-    "    \n",
-    "    # Save the segmented image\n",
-    "    output_path = os.path.splitext(image_path)[0] + \"_segmented.png\"\n",
-    "    segmented_image.save(output_path)\n",
-    "    print(f\"Segmented image saved to {output_path}\")\n",
-    "\n",
-    "except FileNotFoundError as e:\n",
-    "    print(f\"Error: File not found - {e}\")\n",
-    "except ValueError as e:\n",
-    "    print(f\"Error: {e}\")\n",
-    "except Exception as e:\n",
-    "    print(f\"Error: {e}\")"
+    "segment_image(json_file_path, output_folder)"
    ]
   },
   {
@@ -227,13 +193,6 @@
     "\n",
     "# delete_directory('../data/cam1_labeled')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
