Update image segmentation notebook and JSON format

--- a/notebooks/image_segmenation.ipynb
+++ b/notebooks/image_segmenation.ipynb
@@ -123,16 +123,22 @@
    "source": [
     "import json\n",
     "import os\n",
-    "from PIL import Image, ImageDraw\n",
+    "from PIL import Image, ImageDraw, ImageOps\n",
+    "\n",
+    "def resize_image(image, target_size):\n",
+    "    # Check if the image dimensions match the target size\n",
+    "    if image.size == target_size:\n",
+    "        return image\n",
+    "    else:\n",
+    "        return image.resize(target_size)\n",
     "\n",
     "def segment_image(json_file, output_folder):\n",
     "    with open(json_file, 'r') as f:\n",
     "        data = json.load(f)\n",
     "        \n",
     "    for filename, image_data in data.items():\n",
-    "        \n",
     "        # Construct paths for segmented image and original image\n",
-    "        original_img_path = os.path.join('../data/cam1_labeled', filename)\n",
+    "        original_img_path = os.path.join('../data/cam1_rgb', filename)\n",
     "        \n",
     "        # Check if the original image file exists\n",
     "        if not os.path.exists(original_img_path):\n",
@@ -142,15 +148,19 @@
     "        # Open original image\n",
     "        original_image = Image.open(original_img_path)\n",
     "        \n",
+    "        # Resize image if needed\n",
+    "        target_size = (640, 928)\n",
+    "        resized_image = resize_image(original_image, target_size)\n",
+    "        \n",
     "        # Create a mask image for the regions to remove\n",
-    "        mask = Image.new('L', original_image.size, 0)\n",
+    "        mask = Image.new('L', resized_image.size, 0)\n",
     "        draw = ImageDraw.Draw(mask)\n",
     "        \n",
     "        regions_to_remove = []\n",
     "        regions = image_data.get('regions', [])\n",
     "        for idx, region in enumerate(regions):\n",
     "            region_attributes = region.get('region_attributes', {})\n",
-    "            if not region_attributes:\n",
+    "            if region_attributes:\n",
     "                # If region_attributes is empty, mark for removal\n",
     "                shape_attributes = region.get('shape_attributes', {})\n",
     "                x = shape_attributes.get('x', 0)\n",
@@ -158,21 +168,27 @@
     "                width = shape_attributes.get('width', 0)\n",
     "                height = shape_attributes.get('height', 0)\n",
     "                \n",
+    "                # Draw rectangle on mask\n",
     "                draw.rectangle([x, y, x + width, y + height], fill=255)\n",
     "                regions_to_remove.append(idx)\n",
     "        \n",
-    "        # Apply the mask to segment the original image\n",
-    "        segmented_image = Image.composite(original_image, Image.new('RGB', original_image.size, (255, 255, 255)), mask)\n",
+    "        # Invert the mask to remove everything except the segmented region\n",
+    "        inverted_mask = ImageOps.invert(mask)\n",
     "        \n",
-    "        # Save or display the segmented image\n",
-    "        segmented_img_path = os.path.join(output_folder, filename)\n",
+    "        # Apply the inverted mask to segment the resized image\n",
+    "        segmented_image = Image.composite(resized_image, Image.new('RGB', resized_image.size, (255, 255, 255)), inverted_mask)\n",
+    "        \n",
+    "        # Save the segmented image with a new filename\n",
+    "        new_filename = f\"segmented_{os.path.splitext(filename)[0]}.png\"\n",
+    "        segmented_img_path = os.path.join(output_folder, new_filename)\n",
     "        segmented_image.save(segmented_img_path)\n",
-    "        segmented_image.show()\n",
+    "        print(f\"Saved segmented image: {segmented_img_path}\")\n",
     "\n",
     "# Example usage\n",
-    "json_file_path = '../data/cam1_labeled/json1.json' # original name: date_1-5-2024_10.0.11_1_json.json\n",
-    "output_folder = '../data/cam1_segmented/'\n",
+    "json_file_path = '../data/cam1_test.json'          # Replace with your JSON file path\n",
+    "output_folder = '../data/cam1_rgb/'                # Replace with your output folder path\n",
     "\n",
+    "# Perform segmentation\n",
     "segment_image(json_file_path, output_folder)"
    ]
   },
@@ -193,6 +209,13 @@
     "\n",
     "# delete_directory('../data/cam1_labeled')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
